--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,8 @@
 DJANGO_SETTINGS_MODULE = murasaki.settings.test
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
+
+[run]
+omit =
+    */migrations/*
+    */tests/*
