--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ psycopg2-binary = "^2.9.9"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
 pillow = "^10.1.0"
+django-imagekit = "^5.0.0"
 
 
 [build-system]
