Add basic photo/video gallery code

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,8 +2,13 @@
 DJANGO_SETTINGS_MODULE = murasaki.settings.test
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
+# ignore deprecation warning from django-embed-video
+filterwarnings =
+    ignore::DeprecationWarning:embed_video
 
 [run]
 omit =
     */migrations/*
     */tests/*
+
+
