--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 gunicorn = "^21.2.0"
 pillow = "^10.1.0"
 django-imagekit = "^5.0.0"
+django-embed-video = "^1.4.9"
 
 
 [build-system]
